--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,7 +73,7 @@
             </div>
             <div class="col text-center">
                 <main class="form-signin mt-5 text-center container border border-5">
-                <h1 class="h3 mb-3 mt-2 fw-normal">Graph</h1>
+                <h1 class="h3 mb-3 mt-2 fw-normal">Currency Rate Progression Chart</h1>
                 <canvas id="rateExchangeRate"></canvas>   
                 </main>
             </div>
