--- a/views/authorized/saved.ejs
+++ b/views/authorized/saved.ejs
@@ -6,7 +6,7 @@
 
     <main class="form-signin mt-3 text-center container">
     <%if(data.length!=0) {%>   
-      <table class="table table-hover table-border">
+      <table class="table table-sm table-hover table-border">
         <thead>
           <tr>
             <th scope="col">S.No</th>
