--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -10,7 +10,7 @@
       <div class="d-flex mb-2 mb-lg-0">
         <% if (userType === 'authorized') { %>
           <div class="nav-item">
-            <a class="nav-link active text-light" aria-current="page">Hi <%= name%>!</a>
+            <a class="nav-link active text-light" aria-current="page">Hi <%= name%> </a>
           </div>  
         <% if(title !== 'Saved searches') {%>
           <div class="nav-item">
