--- a/views/unauthorized/signup.ejs
+++ b/views/unauthorized/signup.ejs
@@ -59,7 +59,7 @@
     </div>
     <% if(duplicate) {%>
       <div id="myAlert" class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>Aleardy an account created under the provided email</strong>
+        <strong>Aleardy an account created under the provided email or contact number.</strong>
         <button type="button" id="close" class="btn-close" aria-label="Close"></button>
       </div>
       <%}%>
